# SqlPile

./: .gitignore  .gitmodules  ReadMe.md  analyse_repo.py  config.py  data_loading.py  extract_sql.py  extract_strings.py  main.py  pyproject.toml  string_utils.py
src/: config.py
src/fixes/: double_columns.ipynb  join_types.ipynb  joins.py
src/other_datasets/sql_share/: import_sql_share.py
src/other_datasets/sql_storm/: config.py  import_to_database.py
src/playground/: queries_view.ipynb  urls_to_parquet.py
src/sql_analysis/: all.py  analyse_sql_query.py  analyze_queries_in_db.py  execute_queries.py  get_schemas_from_create_query.py  load_queries_to_database.py  load_queries_to_schema_pile.py  load_schema_pile_to_duckdb.py  load_schemapile_json_to_ddb.py  main.py  sql_types.py
src/sql_analysis/execution/: mock_query.py  models.py  prepare_sql_for_execution.py
src/sql_analysis/fixing/: fix_query_erros.py
src/sql_analysis/tools/: extra_functions.py  get_int_matcher.py  parse_sql.py  semantic_type.py  sql_to_schema.py  sql_types.py
src/sql_scraping/: analyse_repo.py  data_loading.py  extract_sql.py  extract_strings.py  main.py  string_utils.py
tests/: extract_strings_c_sharp.py  test_extract_strings.py
