[tool.poetry]
name = "sqlpile"
version = "0.1.0"
description = ""
authors = ["PGross <paul.riedlingen@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.32.4"
urllib3 = "^2.4.0"
pytest = "^8.4.0"
pyjsparser = "^2.7.1"
javalang = "^0.13.0"
tree-sitter = "^0.24.0"
tree-sitter-language-pack = "^0.8.0"
duckdb = "^1.3.0"
tqdm = "^4.67.1"
pandas = "^2.3.0"
pyarrow = "^20.0.0"
notebook = "^7.4.3"
sqloxide = "^0.1.56"
langchain = "^0.3.25"
langchain-community = "^0.3.25"
langchain-ollama = "^0.3.3"
langchain-openai = "^0.3.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

